Thêm richtext cho description (ở head). Sửa lỗi trong edit_store và store_detail. Thêm tag trong store_detail.ejs.

--- a/views/store_detail.ejs
+++ b/views/store_detail.ejs
@@ -63,6 +63,11 @@
                                 <center>
                                     <%= product.media[0].media_name %>
                                 </center>
+                                <center>
+                                    <% product.tags.forEach(function(tag){ %>
+                                        <a href="tags?tag=<%=tag%>"><%=tag%> - </a>
+                                    <% }) %>
+                                </center>
                             </tr>
                             <tr>
                                 <td colspan="3">
