--- a/views/insert_product.ejs
+++ b/views/insert_product.ejs
@@ -82,7 +82,7 @@
 
 
                         <div class="col-md-12">
-                            <input type="button" value="Thêm" class="btn btn-primary btn-block input_insertstore">
+                            <input type="submit" value="Thêm" class="btn btn-primary btn-block input_insertstore">
                         </div>
                     </form>
                 </div>
