--- a/views/partial/head.ejs
+++ b/views/partial/head.ejs
@@ -4,6 +4,7 @@
 <title>Node Js using bootstrap</title>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="./js/nicEdit.js"></script>
 <!-- Bootstrap -->
 <link rel="stylesheet" href="./css/bootstrap.css"/>
 <link rel="stylesheet" href="./css/bootstrap.min.css"/>
