fix index(button show store bằng nhau)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
                 <img class="img-store" src="<%= store.cover %>" alt=" ">
                 <img class="img-logo" src="<%= store.logo %>">
                 <center><a href="store_detail?id=<%= store._id %>"><h4 class="h4_index"><%= store.store_name %></h4></a></center>
-                <p>
+                <p class="p-index">
                     <% store.address.forEach(function (a) { %>
                     <%= (a.street + ", " + a.district + ", " + a.city).substring(0, 50) %>... <a href="store_detail?id=<%= store._id %>">xem thêm</a>
                     <% }) %>
