--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,8 +29,9 @@ a:hover{
     /*margin-left: 3%;*/
 }
 .img-store{
-    max-height: 337px;
-    max-width: 337px;
+    /*max-height: 337px;*/
+    height: 70px;
+    /*max-width: 337px;*/
 }
 .img-logo{
     position: absolute;
@@ -65,15 +66,19 @@ a:hover{
     width: 100%;
 }
 .thumbnail{
-    height: 320px;
+    height: 350px;
 }
 .btn_index{
     padding-bottom: 10px;
     bottom: -10px;
     position: relative;
 }
+.p-index{
+    height: 100px;
+}
 .h4_index{
-    margin-top: 30px;
+    margin-top: 40px;
+    height: 50px;
 }
 .dropdown-menu {
     left: -69px;
@@ -97,6 +102,7 @@ a:hover{
 
 .avt-store {
     width: 30%;
+
     /*height: 40%;*/
     /*border-radius: 150px;*/
 
