--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,7 +26,7 @@ a:hover{
     margin-left: 50px;
 }
 .row-container{
-    /*margin-left: 3%;*/
+    margin-left: 3%;
 }
 .img-store{
     /*max-height: 337px;*/
