--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -80,6 +80,10 @@ a:hover{
     margin-top: 40px;
     height: 50px;
 }
+.label-index{
+    margin-top: 40px;
+    width: 100%;
+}
 .dropdown-menu {
     left: -69px;
     padding: 25px 0;
