--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -36,33 +36,33 @@
             <!--</ul>-->
             <!--</li>-->
             <!--</ul>-->
-            <form class="navbar-form navbar-left" role="search">
-                <div class="input-group">
-                    <div class="input-group-btn">
+            <!--<form class="navbar-form navbar-left" role="search">-->
+                <!--<div class="input-group">-->
+                    <!--<div class="input-group-btn">-->
 
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                        </ul>
-                    </div>
-                    <input type="text" class="form-control">
-                    <div class="input-group-btn">
-                        <button type="button" class="btn btn-primary" tabindex="-1">Search</button>
-                        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" tabindex="-1">
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <% industry_array.forEach(function(industry){ %>
-                            <li><a href="industry_search?type=<%=industry.industry_name%>"><%=industry.industry_name%></a></li>
-                            <%})%>
-                            <li class="divider"></li>
-                        </ul>
-                    </div>
-                </div>
-            </form>
+                        <!--<ul class="dropdown-menu">-->
+                            <!--<li><a href="#">Action</a></li>-->
+                            <!--<li><a href="#">Another action</a></li>-->
+                            <!--<li><a href="#">Something else here</a></li>-->
+                            <!--<li class="divider"></li>-->
+                            <!--<li><a href="#">Separated link</a></li>-->
+                        <!--</ul>-->
+                    <!--</div>-->
+                    <!--<input type="text" class="form-control">-->
+                    <!--<div class="input-group-btn">-->
+                        <!--<button type="button" class="btn btn-primary" tabindex="-1">Search</button>-->
+                        <!--<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" tabindex="-1">-->
+                            <!--<span class="caret"></span>-->
+                        <!--</button>-->
+                        <!--<ul class="dropdown-menu">-->
+                            <!--<% industry_array.forEach(function(industry){ %>-->
+                            <!--<li><a href="industry_search?type=<%=industry.industry_name%>"><%=industry.industry_name%></a></li>-->
+                            <!--<%})%>-->
+                            <!--<li class="divider"></li>-->
+                        <!--</ul>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</form>-->
             <ul class="nav navbar-nav navbar-right">
                 <li class="i-menu"><a href="insert_store"><i class="fa fa-yelp ">Insert Store</i></a></li>
                 <li class="i-menu"><a href="/"><i class="fa fa-yelp ">Home</i></a></li>
