Thêm tìm kiếm store theo industry (chưa có giao diện). Bổ sung room (address 2) trong insert & edit store.

--- a/views/edit_store.ejs
+++ b/views/edit_store.ejs
@@ -329,7 +329,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
                         </select>
                     </div>
                     <div class="col-md-12">
-                        <input type="submit" value="Thêm" class="btn btn-primary btn-block input_insertstore">
+                        <input type="submit" value="Lưu" class="btn btn-primary btn-block input_insertstore">
                     </div>
                 </form>
             </div>
