--- a/views/insert_industry.ejs
+++ b/views/insert_industry.ejs
@@ -4,8 +4,9 @@
     <title>Hehe</title>
 </head>
 <body>
-AAAAAAAAAAA
-
-
+<form method="post">
+    <input type="text" name="txtIndustryName">
+    <input type="submit" value="Thêm">
+</form>
 </body>
 </html>
