Thêm address (số phòng) cho insert & edit store.

--- a/views/insert_store.ejs
+++ b/views/insert_store.ejs
@@ -78,7 +78,10 @@
                         <input type="text" required name="txtStreet" placeholder="Số/ Đường"
                                class="form-control input_insertstore">
                     </div>
-
+                    <div class="col-md-4">
+                        <input type="text" required name="txtRoom" placeholder="Số/Phòng"
+                               class="form-control input_insertstore">
+                    </div>
                     <div class="col-md-12">
                         <input type="text" required name="txtPhone" placeholder="Số điện thoại"
                                class="form-control  input_insertstore">
