--- a/views/store_detail.ejs
+++ b/views/store_detail.ejs
@@ -23,7 +23,7 @@
                 <h3><%= store.store_name %></h3></p>
                 <p><%= store.phone %></p>
 
-                <p><%= store.address[0].street + ", " + store.address[0].district + ", " + store.address[0].city %></p>
+                <p><%= store.address[0].street + ", " + store.address[0].district + ", " + store.address[0].city + ", " + store.address[0].room%></p>
 
                 <p><%= store.website %></p>
 
