--- a/views/edit_store.ejs
+++ b/views/edit_store.ejs
@@ -306,6 +306,10 @@ google.maps.event.addDomListener(window, 'load', initialize);
                         <input type="text" required name="txtStreet" placeholder="Số/Đường"
                                class="form-control input_insertstore" value="<%= address.street %>">
                     </div>
+                    <div class="col-md-4">
+                        <input type="text" required name="txtRoom" placeholder="Phòng"
+                               class="form-control input_insertstore" value="<%= address.room %>">
+                    </div>
                     <% }) %>
                     <div class=" col-md-12">
                         <input type="text" required name="txtPhone" placeholder="Số Điện Thoại"
