--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -64,6 +64,8 @@
                 <!--</div>-->
             <!--</form>-->
             <ul class="nav navbar-nav navbar-right">
+                <li class="i-menu"><a href="test"><i class="fa fa-yelp ">Test</i></a></li>
+                <li class="i-menu"><a href="industry"><i class="fa fa-yelp ">Industry</i></a></li>
                 <li class="i-menu"><a href="insert_industry"><i class="fa fa-yelp ">Insert Industry</i></a></li>
                 <li class="i-menu"><a href="insert_store"><i class="fa fa-yelp ">Insert Store</i></a></li>
                 <li class="i-menu"><a href="/"><i class="fa fa-yelp ">Home</i></a></li>
