--- a/views/search.ejs
+++ b/views/search.ejs
@@ -9,7 +9,7 @@
 </header>
 <div class="col-md-12 col-search">
     <form action="" method="post">
-        <input name="txtTextSearch" type="text" placeholder="Bạn muốn tìm gì?">
+        <input name="txtTextSearch" type="text" placeholder="Bạn muốn tìm gì?" autofocus>
         <input type="radio" name="type" value="store" checked>Store
         <input type="radio" name="type" value="product">Product
         <input type="submit" value="Search">
