Bổ sung vài thứ.

--- a/views/insert_product.ejs
+++ b/views/insert_product.ejs
@@ -66,7 +66,7 @@
 
                             </div>
                             <div class="col-md-5 input_insertstore">
-                                <input type="text" required name="txtMediaUrl" placeholder="Media url"
+                                <input type="text"  name="txtMediaUrl" placeholder="Media url"
                                        class="form-control input_insertstore">
                             </div>
                             <label class="col-md-2 control-label input_insertstore">
@@ -74,7 +74,7 @@
                             </label>
 
                             <div class="col-md-5 input_insertstore">
-                                <input type="file" required name="ulfMediaUrl" placeholder=""
+                                <input type="file"  name="ulfMediaUrl" placeholder=""
                                        accept="image/*" alt="Product Image"
                                        class="form-control  input_insertstore">
                             </div>
