Thêm insert_media.

--- a/views/product_detail.ejs
+++ b/views/product_detail.ejs
@@ -5,6 +5,8 @@
   <title></title>
 </head>
 <body>
+<a href="insert_media">Thêm Media</a>
+
 <% product_array.forEach(function(product){ %>
    <%=product.product_name%>
 <% })%>
