Thêm media cho product.

--- a/views/insert_media.ejs
+++ b/views/insert_media.ejs
@@ -6,14 +6,14 @@
 </head>
 <body>
 <form method="post" enctype="multipart/form-data">
-    <input type="text" placeholder="Media Name">
+    <input type="text" placeholder="Media Name" name=txtMediaName>
     <br>
     <input type="radio" name="grpType" value="Image" checked
            class="form-control input_insertstore"> Image
     <input type="radio" name="grpType" value="Video"
            class="form-control  "> Video
     <br>
-    <input type="text" placeholder="Media Url">
+    <input type="text" placeholder="Media Url" name="txtMediaUrl">
     <br>
     <input type="file" name="ulfMediaUrl" placeholder="E"
            accept="image/*" alt="Product Image"
