--- a/views/product_detail.ejs
+++ b/views/product_detail.ejs
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-  <meta charset="UTF-8">
-  <title></title>
+    <meta charset="UTF-8">
+    <title></title>
 </head>
 <body>
 <a href="insert_media">Thêm Media</a>
 
 <% product_array.forEach(function(product){ %>
-   <%=product.product_name%>
-<% })%>
+<% product.media.forEach(function(media){ %>
+    <%=media.media_name%>
+<% })}) %>
 </body>
 </html>
