Bổ sung edit_media.ejs. Bổ sung trang search.

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -35,7 +35,7 @@
         </div>
         <div class="col-md-2">
             <!--<label><input id="rdb1" type="radio" name="toggler" value="1"/>Store</label>-->
-            <label><input type="radio" id="rdb1" class="store" name="type" value="store">Store    </label>
+            <label><input type="radio" id="rdb1" class="store" name="type" value="store" checked>Store    </label>
             <!--<input type="radio" class="product" name="type" value="product">Product-->
             <label><input id="rdb2" class="product " type="radio" name="type" value="product"/>Product</label>
             <!--<input type="submit" name="button_s" class="button_ss" value="Search">-->
