--- a/views/product_detail.ejs
+++ b/views/product_detail.ejs
@@ -6,10 +6,11 @@
 </head>
 <body>
 <a href="insert_media">Thêm Media</a>
-
+<br>
 <% product_array.forEach(function(product){ %>
 <% product.media.forEach(function(media){ %>
-    <%=media.media_name%>
+    <a href="edit_media?id=<%=media.media_id%>"><%=media.media_name%></a>
+<br>
 <% })}) %>
 </body>
 </html>
