--- a/views/search.ejs
+++ b/views/search.ejs
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <% include ./partial/head %>
-
 </head>
 <body>
 <header>
@@ -107,7 +106,7 @@
                     <tr>
                         <td colspan="3">
                             <center>
-                                <a href="edit_product?id=tttt" class="btn btn-primary"
+                                <a href="edit_product?id=<%=p._id%>" class="btn btn-primary"
                                    style="width: 95% ; margin-top: 10px;">Edit
                                     Product
                                 </a>
