--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
             <div class="thumbnail">
                 <img class="img-store" src="<%= store.cover %>" alt=" ">
                 <img class="img-logo" src="<%= store.logo %>">
-                <center><a href="store_detail?id=<%= store._id %>"><h4 class="h4_index"><%= store.store_name %></h4></a></center>
+                <center><a href="store_detail?id=<%= store._id %>"><h4 class="h4_index"><%= store.store_name.substring(0, 40) %><%if (store.store_name.length>40){%>...<%} %></h4></a></center>
                 <p class="p-index">
                     <% store.address.forEach(function (a) { %>
                     <%= (a.street + ", " + a.district + ", " + a.city).substring(0, 50) %>... <a href="store_detail?id=<%= store._id %>">xem thêm</a>
