Sửa lỗi search không dấu, thêm một số thứ trong search. Thêm location_schema.

--- a/views/insert_store.ejs
+++ b/views/insert_store.ejs
@@ -67,7 +67,7 @@
                                class="form-control  input_insertstore">
                     </div>
                     <div class="col-md-4">
-                        <input type="text" required name="txtCity" placeholder="Thành phố"
+                        <input type="text" required name="txtCity" placeholder="Tỉnh/Thành phố"
                                class="form-control input_insertstore">
                     </div>
                     <div class="col-md-4">
@@ -75,7 +75,7 @@
                                class="form-control  input_insertstore">
                     </div>
                     <div class="col-md-4">
-                        <input type="text" required name="txtStreet" placeholder="Số/ Đường"
+                        <input type="text" required name="txtStreet" placeholder="Số/Đường"
                                class="form-control input_insertstore">
                     </div>
                     <div class="col-md-4">
