Tách media ra riêng, thêm media_schema. Thêm product_name_non_accented để searcch không dấu. Sửa lỗi search, sửa lỗi insert media.

--- a/views/edit_media.ejs
+++ b/views/edit_media.ejs
@@ -7,7 +7,23 @@
 <body>
 <% product_array.forEach(function(product){
         product.media.forEach(function(media){ %>
-<a href="<%= media.media_id %>"><%= media.media_name %></a>
+<form method="post" enctype="multipart/form-data">
+    <input type="text" placeholder="Media Name" name=txtMediaName value="<%=media.media_name%>">
+    <br>
+    <input type="radio" name="grpType" value="Image" checked
+           class="form-control input_insertstore"> Image
+    <input type="radio" name="grpType" value="Video"
+           class="form-control  "> Video
+    <br>
+    <input type="text" placeholder="Media Url" name="txtMediaUrl" value="<%=media.media_url%>">
+    <br>
+    <input type="file" name="ulfMediaUrl" placeholder="E"
+           accept="image/*" alt="Product Image"
+           class="form-control  input_insertstore">
+    <br>
+    <input type="submit" value="Lưu">
+    <a href="<%= media.media_id %>"><%= media.media_name %></a>
+</form>
 <% })}) %>
 </body>
 </html>
